# world-exams.github.io

./: .gitignore  AGENTS.md  LICENSE  LICENSE.md  README.md  SKILL.md  astro.config.mjs  index.html  lint_output.txt  masterplan.md  package-lock.json  package.json  topics_report.txt
.agent/: AGENTS.md
.gitcore/: AGENT_INDEX.md  ARCHITECTURE.md  features.json
.github/: DEPLOY_QUICK_REFERENCE.md  JULES_TASK.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  issue_grade6.md  issue_grade7.md  issue_grade8.md
config/: countries.config.ts
docs/: ANTI_SCRAPING_STRATEGY.md  API_GENERATION.md  API_REAL_SETUP.md  AUTHENTICATION_MAGIC_LINK.md  BUSINESS_MODEL.md  CHANGELOG.md  DEBUG_SESSION_PARTY_MODE.md  E2E_PARTY_MODE_TESTS.md  ENGLISH_CURRICULUM_MATRIX.md  ENGLISH_LEARNING_PROTOCOL.md  ENGLISH_REPORT_TEMPLATE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  INFOGRAPHIC_GENERATION_PLAN.md  INTERNATIONALIZATION_REPORT.md  MODERN_QUESTIONS_PROTOCOL.md  MONETIZATION_STRATEGY.md  OFFLINE_STRATEGY.md  PARTY_MODE.md  PARTY_MODE_CONFIG_SYNC_FIX.md  PARTY_MODE_MIGRATION.md  PARTY_MODE_SYNC_FIX.md  PARTY_MODE_WEB_ARCHITECTURE.md  QUESTION_GENERATION_PROTOCOL_V2.md  QUESTION_GENERATION_PROTOCOL_V3.md  QUESTION_GENERATION_PROTOCOL_V4.md  QUESTION_GENERATION_PROTOCOL_V5.md  README.md  ROADMAP_NATIVE_APPS.md  (+10 more)
services/social-orchestrator/: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  run.ps1
services/social-orchestrator/content/: daily-tips.json
services/social-orchestrator/src/: content.rs  discord.rs  github.rs  main.rs  telegram.rs  twitter.rs
(+2742 files in other folders)
