[package]
name = "social-orchestrator"
version = "1.0.0"
edition = "2021"
authors = ["World Exams <contacto@saberparatodos.space>"]
description = "Unified social media orchestrator for World Exams organization"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"

# GitHub API
octocrab = "0.34"

# Telegram API
teloxide = { version = "0.12", features = ["macros"] }

# Discord API
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend"] }

# Twitter API
egg-mode = "0.16"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
